--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DASHBOARD - FREMST</title>
+    <!-- <script type="text/javascript">
+      function loadGoogleTranslate() {
+        var script = document.createElement("script");
+        script.type = "text/javascript";
+        script.src =
+          "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit";
+        document.body.appendChild(script);
+      }
+
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: "en",
+            includedLanguages: "es,fr,de,hi,bn",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
+          "google_translate_element"
+        );
+      }
+
+      window.onload = loadGoogleTranslate; // Ensure script loads on Safari
+    </script>
+
+    <meta name="google" content="notranslate" /> -->
   </head>
   <body>
     <div id="root"></div>
