--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
     </script>
 
     <meta name="google" content="notranslate" /> -->
+    <div class="gtranslate_wrapper"></div>
+    <script>
+      window.gtranslateSettings = {
+        default_language: "en",
+        languages: ["en", "sv"],
+        wrapper_selector: ".gtranslate_wrapper",
+      };
+    </script>
+    <script
+      src="https://cdn.gtranslate.net/widgets/latest/float.js"
+      defer
+    ></script>
   </head>
   <body>
     <div id="root"></div>
